Fix weird Chrome layout bug

--- a/new/embreach.css
+++ b/new/embreach.css
@@ -20,4 +20,5 @@ a {
 .link-list > li {
   list-style: none;
   display: inline-block;
+  margin-right: 5px;
 }
